# rust_workspace_template

./: .dockerignore  .gitignore  .typos.toml  AGENTS.md  CHANGELOG.md  CI.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  RELEASE.md  SECURITY.md  clippy.toml  deny.toml  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.claude/: settings.json
.codex/: config.toml
.config/: nextest.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
integration_tests/: Cargo.toml
integration_tests/tests/: workspace_integration.rs
optml/: Cargo.toml
optml/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
server/tests/: cli_contract.rs  cli_json_snapshot.rs
shared_logic/: Cargo.toml
shared_logic/src/: lib.rs
shared_logic/tests/: compile_fail_contracts.rs  integration_baseline.rs  property_invariants.rs
shared_logic/tests/golden/: calculation_report.txt
shared_logic/tests/ui/: arithmetic_operation_type_contract_rejects_boolean_argument.rs  arithmetic_operation_type_contract_rejects_boolean_argument.stderr
test_helpers/: Cargo.toml
test_helpers/src/: lib.rs
test_helpers/tests/: helpers_contract.rs  policy_rules.rs
tests/: Cargo.toml
tests/src/: lib.rs
