[package]
name = "integration_tests"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Workspace integration tests"
repository = "https://github.com/user/repo"
readme = ""
keywords = []
categories = []
publish = false

[lints]
workspace = true

[dev-dependencies]
