[package]
name = "optml"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false
description = "description"
repository = "repository"
readme = "readme"
keywords = ["keyword"]
categories = ["category"]

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[lints]
workspace = true
