[package]
name = "server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false
description = "Server application"
repository = "https://github.com/kuqmua/rust_workspace_template"
readme = "../README.md"
keywords = ["server"]
categories = ["web-programming"]

[dependencies]
shared_logic.workspace = true

[lints]
workspace = true
