[package]
name = "shared_logic"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false
description = "Shared logic crate with reusable domain examples and baseline tests"
repository = "https://github.com/kuqmua/rust_workspace_template"
readme = "../README.md"
keywords = ["workspace", "template"]
categories = ["development-tools"]

[dependencies]
thiserror.workspace = true

[dev-dependencies]

[lints]
workspace = true
