[package]
name = "tests"
version = "0.1.0"
publish = false
description = "description"
repository = "repository"
readme = "readme"
license = "license"
keywords = ["keyword"]
categories = ["category"]
edition = "2024"

[dev-dependencies]
toml.workspace = true
regex.workspace = true
syn.workspace = true
uuid.workspace = true
walkdir.workspace = true

[lints]
workspace = true
