[package]
name = "tests"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false
description = "description"
repository = "repository"
readme = "readme"
keywords = ["keyword"]
categories = ["category"]

[dev-dependencies]
optml.workspace = true
regex.workspace = true
syn.workspace = true
toml.workspace = true
uuid.workspace = true
walkdir.workspace = true

[lints]
workspace = true
